@@ -21,10 +21,18 @@
             par <?php echo format_membre($compte->getMembreRelatedByEnregistrePar()) ?></td>
         </tr>
         <tr>
-            <th><?php echo image_tag('time.png', array('align' => 'absmiddle', 'alt' => 'Time'))?>
-            Mise à jour le :</th>
-            <td><?php echo format_datetime($compte->getUpdatedAt(), 'dd/MM/yyyy HH:mm') ?>
-            par <?php echo format_membre($compte->getMembreRelatedByMisAJourPar()) ?></td>
+            <th>
+                <?php echo image_tag('time.png', array('align' => 'absmiddle', 'alt' => 'Time'))?>
+                Mise à jour le :
+            </th>
+            <td>
+                <?php if ($compte->getMisAJourPar()):?>
+                    <?php echo format_datetime($compte->getUpdatedAt(), 'dd/MM/yyyy HH:mm') ?>
+                    par <?php echo format_membre($compte->getMembreRelatedByMisAJourPar()) ?>
+                <?php else: ?>
+                    <i>Aucune mise à jour pour le moment</i>
+                <?php endif; ?>
+            </td>
         </tr>
     </tbody>
 </table>
